--- a/samples/lazarus/uprincipal.lfm
+++ b/samples/lazarus/uprincipal.lfm
@@ -62,11 +62,11 @@ object FormCalcDemo: TFormCalcDemo
   end
   object pnlOperacao: TGroupBox
     Left = 8
-    Height = 248
+    Height = 232
     Top = 112
     Width = 520
     Caption = 'Operação / Item'
-    ClientHeight = 228
+    ClientHeight = 212
     ClientWidth = 516
     TabOrder = 1
     object Label4: TLabel
@@ -227,66 +227,66 @@ object FormCalcDemo: TFormCalcDemo
       Left = 8
       Height = 28
       Top = 180
-      Width = 160
+      Width = 120
       Caption = 'Regime Geral (JSON)'
       TabOrder = 11
       OnClick = btnCalcularRegimeGeralJSONClick
     end
     object btnCalcularRegimeGeralTipado: TButton
-      Left = 176
+      Left = 128
       Height = 28
       Top = 180
-      Width = 180
+      Width = 125
       Caption = 'Regime Geral (Tipado)'
       TabOrder = 12
       OnClick = btnCalcularRegimeGeralTipadoClick
     end
     object btnBaseIS: TButton
-      Left = 362
+      Left = 253
       Height = 28
       Top = 180
-      Width = 70
-      Caption = 'IS'
+      Width = 108
+      Caption = 'Base de Cálculo IS'
       TabOrder = 13
       OnClick = btnBaseISClick
     end
     object btnBaseCIBS: TButton
-      Left = 434
+      Left = 362
       Height = 28
       Top = 180
-      Width = 70
-      Caption = 'CBS/IBS'
+      Width = 142
+      Caption = 'Base de Cálclulo CBS/IBS'
       TabOrder = 14
       OnClick = btnBaseCIBSClick
     end
   end
   object pnlXML: TGroupBox
     Left = 8
-    Height = 160
-    Top = 360
+    Height = 200
+    Top = 352
     Width = 1084
     Caption = 'XML'
-    ClientHeight = 140
+    ClientHeight = 180
     ClientWidth = 1080
     TabOrder = 2
     object Label15: TLabel
       Left = 8
       Height = 15
-      Top = 20
+      Top = 6
       Width = 24
       Caption = 'Tipo'
     end
     object Label16: TLabel
       Left = 180
       Height = 15
-      Top = 20
+      Top = 6
       Width = 41
       Caption = 'Subtipo'
     end
     object edtXMLTipo: TEdit
       Left = 46
       Height = 23
-      Top = 16
+      Top = 2
       Width = 120
       TabOrder = 0
       Text = 'nfe'
@@ -294,7 +294,7 @@ object FormCalcDemo: TFormCalcDemo
     object edtXMLSubtipo: TEdit
       Left = 240
       Height = 23
-      Top = 16
+      Top = 2
       Width = 120
       TabOrder = 1
       Text = 'grupo'
@@ -302,7 +302,7 @@ object FormCalcDemo: TFormCalcDemo
     object btnValidarXML: TButton
       Left = 370
       Height = 28
-      Top = 14
+      Top = 0
       Width = 65
       Caption = 'Validar'
       TabOrder = 2
@@ -311,7 +311,7 @@ object FormCalcDemo: TFormCalcDemo
     object btnGerarXML: TButton
       Left = 440
       Height = 28
-      Top = 14
+      Top = 0
       Width = 70
       Caption = 'Gerar'
       TabOrder = 3
@@ -319,260 +319,261 @@ object FormCalcDemo: TFormCalcDemo
     end
     object MemoXML: TMemo
       Left = 8
-      Height = 88
-      Top = 48
+      Height = 144
+      Top = 32
       Width = 1066
+      Anchors = [akTop, akLeft, akBottom]
       ScrollBars = ssAutoBoth
       TabOrder = 4
     end
   end
   object pnlDadosAbertos: TGroupBox
     Left = 536
-    Height = 352
+    Height = 336
     Top = 8
     Width = 556
     Anchors = [akTop, akLeft, akRight]
     Caption = 'Dados Abertos'
-    ClientHeight = 332
+    ClientHeight = 316
     ClientWidth = 552
     TabOrder = 3
     object Label17: TLabel
-      Left = 8
+      Left = 0
       Height = 15
-      Top = 24
+      Top = 12
       Width = 51
       Caption = 'Data Base'
     end
     object Label18: TLabel
-      Left = 180
+      Left = 172
       Height = 15
-      Top = 24
+      Top = 12
       Width = 42
       Caption = 'Sigla UF'
     end
     object Label19: TLabel
-      Left = 260
+      Left = 252
       Height = 15
-      Top = 24
+      Top = 12
       Width = 56
       Caption = 'Código UF'
     end
     object Label20: TLabel
-      Left = 360
+      Left = 352
       Height = 15
-      Top = 24
+      Top = 12
       Width = 96
       Caption = 'Código Município'
     end
     object Label21: TLabel
-      Left = 8
+      Left = 0
       Height = 15
-      Top = 56
+      Top = 44
       Width = 60
       Caption = 'Id ClassTrib'
     end
     object Label22: TLabel
-      Left = 180
+      Left = 172
       Height = 15
-      Top = 56
+      Top = 44
       Width = 28
       Caption = 'NCM'
     end
     object Label23: TLabel
-      Left = 360
+      Left = 352
       Height = 15
-      Top = 56
+      Top = 44
       Width = 22
       Caption = 'NBS'
     end
     object edtDataBase: TEdit
-      Left = 70
+      Left = 62
       Height = 23
-      Top = 20
+      Top = 8
       Width = 100
       TabOrder = 0
     end
     object edtSiglaUF: TEdit
-      Left = 232
+      Left = 224
       Height = 23
-      Top = 20
+      Top = 8
       Width = 24
       TabOrder = 1
     end
     object edtCodigoUF: TEdit
-      Left = 324
+      Left = 316
       Height = 23
-      Top = 20
+      Top = 8
       Width = 30
       TabOrder = 2
     end
     object edtCodigoMunicipio: TEdit
-      Left = 460
+      Left = 452
       Height = 23
-      Top = 20
+      Top = 8
       Width = 80
       TabOrder = 3
     end
     object edtIdClassTrib: TEdit
-      Left = 80
+      Left = 72
       Height = 23
-      Top = 52
+      Top = 40
       Width = 80
       TabOrder = 4
     end
     object edtNcmQuery: TEdit
-      Left = 212
+      Left = 204
       Height = 23
-      Top = 52
+      Top = 40
       Width = 120
       TabOrder = 5
     end
     object edtNbsQuery: TEdit
-      Left = 392
+      Left = 384
       Height = 23
-      Top = 52
+      Top = 40
       Width = 148
       TabOrder = 6
     end
     object btnVersao: TButton
-      Left = 8
+      Left = 0
       Height = 28
-      Top = 90
+      Top = 78
       Width = 80
       Caption = 'Versão'
       TabOrder = 7
       OnClick = btnVersaoClick
     end
     object btnUFs: TButton
-      Left = 92
+      Left = 84
       Height = 28
-      Top = 90
+      Top = 78
       Width = 80
       Caption = 'UFs'
       TabOrder = 8
       OnClick = btnUFsClick
     end
     object btnMunicipiosUF: TButton
-      Left = 176
+      Left = 168
       Height = 28
-      Top = 90
+      Top = 78
       Width = 120
       Caption = 'Municípios por UF'
       TabOrder = 9
       OnClick = btnMunicipiosUFClick
     end
     object btnSTIS: TButton
-      Left = 300
+      Left = 292
       Height = 28
-      Top = 90
+      Top = 78
       Width = 80
       Caption = 'ST IS'
       TabOrder = 10
       OnClick = btnSTISClick
     end
     object btnSTCBSIBS: TButton
-      Left = 384
+      Left = 376
       Height = 28
-      Top = 90
+      Top = 78
       Width = 100
       Caption = 'ST CBS/IBS'
       TabOrder = 11
       OnClick = btnSTCBSIBSClick
     end
     object btnNCM: TButton
-      Left = 8
+      Left = 0
       Height = 28
-      Top = 124
+      Top = 112
       Width = 80
       Caption = 'NCM'
       TabOrder = 12
       OnClick = btnNCMClick
     end
     object btnNBS: TButton
-      Left = 92
+      Left = 84
       Height = 28
-      Top = 124
+      Top = 112
       Width = 80
       Caption = 'NBS'
       TabOrder = 13
       OnClick = btnNBSClick
     end
     object btnFundamentacoes: TButton
-      Left = 176
+      Left = 168
       Height = 28
-      Top = 124
+      Top = 112
       Width = 140
       Caption = 'Fundamentações'
       TabOrder = 14
       OnClick = btnFundamentacoesClick
     end
     object btnClassTribPorId: TButton
-      Left = 320
+      Left = 312
       Height = 28
-      Top = 124
+      Top = 112
       Width = 110
       Caption = 'ClassTrib por Id'
       TabOrder = 15
       OnClick = btnClassTribPorIdClick
     end
     object btnClassTribIS: TButton
-      Left = 432
+      Left = 424
       Height = 28
-      Top = 124
+      Top = 112
       Width = 112
       Caption = 'ClassTrib IS'
       TabOrder = 16
       OnClick = btnClassTribISClick
     end
     object btnClassTribCBSIBS: TButton
-      Left = 8
+      Left = 0
       Height = 28
-      Top = 158
+      Top = 146
       Width = 150
       Caption = 'ClassTrib CBS/IBS'
       TabOrder = 17
       OnClick = btnClassTribCBSIBSClick
     end
     object btnAliqUniao: TButton
-      Left = 162
+      Left = 154
       Height = 28
-      Top = 158
+      Top = 146
       Width = 90
       Caption = 'Aliq União'
       TabOrder = 18
       OnClick = btnAliqUniaoClick
     end
     object btnAliqUF: TButton
-      Left = 256
+      Left = 248
       Height = 28
-      Top = 158
+      Top = 146
       Width = 90
       Caption = 'Aliq UF'
       TabOrder = 19
       OnClick = btnAliqUFClick
     end
     object btnAliqMunicipio: TButton
-      Left = 350
+      Left = 342
       Height = 28
-      Top = 158
+      Top = 146
       Width = 120
       Caption = 'Aliq Município'
       TabOrder = 20
       OnClick = btnAliqMunicipioClick
     end
     object btnPedagio: TButton
-      Left = 472
+      Left = 464
       Height = 28
-      Top = 158
+      Top = 146
       Width = 72
       Caption = 'Pedágio'
       TabOrder = 21
       OnClick = btnPedagioClick
     end
     object MemoResp: TMemo
-      Left = 8
-      Height = 135
-      Top = 194
+      Left = 0
+      Height = 128
+      Top = 184
       Width = 540
       Anchors = [akTop, akLeft, akRight]
       ScrollBars = ssAutoBoth
@@ -581,20 +582,20 @@ object FormCalcDemo: TFormCalcDemo
   end
   object pnlLog: TGroupBox
     Left = 8
-    Height = 180
-    Top = 528
+    Height = 148
+    Top = 560
     Width = 1084
     Anchors = [akTop, akLeft, akRight, akBottom]
     Caption = 'Log'
-    ClientHeight = 160
+    ClientHeight = 128
     ClientWidth = 1080
     TabOrder = 4
     object MemoLog: TMemo
-      Left = 0
-      Height = 160
+      Left = 8
+      Height = 128
       Top = 0
-      Width = 1080
-      Align = alClient
+      Width = 1066
+      Anchors = [akTop, akLeft, akRight, akBottom]
       ScrollBars = ssAutoBoth
       TabOrder = 0
     end
